[package]
name = "pfman"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
csv = "1.4.0"
rust_decimal = { version = "1.41.0", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
indoc = "2.0.7"
