[package]
name = "pfman"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
csv = "1.4.0"
directories = "6.0.0"
env_logger = "0.11.10"
log = "0.4.29"
redb = { version = "4.1.0", features = ["logging"] }
rust_decimal = { version = "1.41.0", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
indoc = "2.0.7"
tempfile = "3.27.0"
